--- a/src/ui-fltk/Makefile.am
+++ b/src/ui-fltk/Makefile.am
@@ -2,7 +2,8 @@ AM_CXXFLAGS=@UI_CFLAGS@ -I..
 AM_LDFLAGS=@UI_LDFLAGS@
 
 noinst_LIBRARIES=libui.a
-libui_a_SOURCES=AwayWindow.cc \
+libui_a_SOURCES=AutoConnWindow.cc \
+AwayWindow.cc \
 BuddyWindow.cc \
 ChatWindow.cc \
 NameWindow.cc \
