--- a/src/ui-fltk/Makefile.in
+++ b/src/ui-fltk/Makefile.in
@@ -51,8 +51,9 @@ LIBRARIES = $(noinst_LIBRARIES)
 ARFLAGS = cru
 libui_a_AR = $(AR) $(ARFLAGS)
 libui_a_LIBADD =
-am_libui_a_OBJECTS = AwayWindow.$(OBJEXT) BuddyWindow.$(OBJEXT) \
-	ChatWindow.$(OBJEXT) NameWindow.$(OBJEXT) ui.$(OBJEXT)
+am_libui_a_OBJECTS = AutoConnWindow.$(OBJEXT) AwayWindow.$(OBJEXT) \
+	BuddyWindow.$(OBJEXT) ChatWindow.$(OBJEXT) \
+	NameWindow.$(OBJEXT) ui.$(OBJEXT)
 libui_a_OBJECTS = $(am_libui_a_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/scripts/depcomp
@@ -207,7 +208,8 @@ target_alias = @target_alias@
 AM_CXXFLAGS = @UI_CFLAGS@ -I..
 AM_LDFLAGS = @UI_LDFLAGS@
 noinst_LIBRARIES = libui.a
-libui_a_SOURCES = AwayWindow.cc \
+libui_a_SOURCES = AutoConnWindow.cc \
+AwayWindow.cc \
 BuddyWindow.cc \
 ChatWindow.cc \
 NameWindow.cc \
@@ -260,6 +262,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/AutoConnWindow.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/AwayWindow.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/BuddyWindow.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ChatWindow.Po@am__quote@
