--- a/src/ui-fltk/Makefile.in
+++ b/src/ui-fltk/Makefile.in
@@ -51,7 +51,8 @@ LIBRARIES = $(noinst_LIBRARIES)
 ARFLAGS = cru
 libui_a_AR = $(AR) $(ARFLAGS)
 libui_a_LIBADD =
-am_libui_a_OBJECTS = AutoConnWindow.$(OBJEXT) AwayWindow.$(OBJEXT) \
+am_libui_a_OBJECTS = AutoConnWindow.$(OBJEXT) \
+	AutoConnYNWindow.$(OBJEXT) AwayWindow.$(OBJEXT) \
 	BuddyWindow.$(OBJEXT) ChatWindow.$(OBJEXT) \
 	NameWindow.$(OBJEXT) ui.$(OBJEXT)
 libui_a_OBJECTS = $(am_libui_a_OBJECTS)
@@ -209,6 +210,7 @@ AM_CXXFLAGS = @UI_CFLAGS@ -I..
 AM_LDFLAGS = @UI_LDFLAGS@
 noinst_LIBRARIES = libui.a
 libui_a_SOURCES = AutoConnWindow.cc \
+AutoConnYNWindow.cc \
 AwayWindow.cc \
 BuddyWindow.cc \
 ChatWindow.cc \
@@ -263,6 +265,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/AutoConnWindow.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/AutoConnYNWindow.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/AwayWindow.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/BuddyWindow.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ChatWindow.Po@am__quote@
