src/client.c, src/connection.c, src/connection.h, src/server.c, src/server.h, src/ui-dumb/ui.c, src/directnet.h: Snuff out the last bits of pthreads.
src/gaim2-plugin/event.c, src/gaim2-plugin/gaim-plugin.c: Get the Gaim2 plugin nearly functional again.



git-svn-id: svn://svn.code.sf.net/p/directnet/code/directnet/trunk@394 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -79,7 +79,8 @@ connection.c \
 directnet.c \
 dnconfig.c \
 hash.c \
-server.c
+server.c \
+whereami.c
 
 libdirectnet_gaim_la_CFLAGS=@ENC_CFLAGS@ @AUTH_CFLAGS@ \
  @GAIM_CFLAGS@ -DGAIM_PLUGIN -DGAIM_PLUGINS
