--- a/src/gaim2-plugin/Makefile.am
+++ b/src/gaim2-plugin/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LIBRARIES=libgaim_plugin.a
-libgaim_plugin_a_SOURCES=gaim-plugin.c
+libgaim_plugin_a_SOURCES=event.c gaim-plugin.c
 libgaim_plugin_a_CFLAGS=@GAIM_CFLAGS@ -I.. -DGAIM_PLUGIN -DGAIM_PLUGINS
 
 pixdir=$(prefix)/share/pixmaps/gaim/status/default
