--- a/src/enc-cyfer/Makefile.am
+++ b/src/enc-cyfer/Makefile.am
@@ -1,10 +1,10 @@
 SUBDIRS=cyfer
 
-AM_CFLAGS=@ENC_CFLAGS@ -I.. -Lcyfer/lib -Icyfer/include -Lgmp -Igmp
+AM_CXXFLAGS=@ENC_CFLAGS@ -I.. -Lcyfer/lib -Icyfer/include -Lgmp -Igmp
 AM_LDFLAGS=@ENC_LDFLAGS@ -Lcyfer/lib -Lgmp
 
 noinst_LIBRARIES=libenc.a
-libenc_a_SOURCES=cyfer.c
+libenc_a_SOURCES=cyfer.cc
 
 install:
 	$(MAKE) install-recursive SUBDIRS=""
