--- a/src/auth-gpg/Makefile.am
+++ b/src/auth-gpg/Makefile.am
@@ -1,5 +1,5 @@
-AM_CFLAGS=@ENC_CFLAGS@ -I..
+AM_CXXFLAGS=@ENC_CFLAGS@ -I..
 AM_LDFLAGS=@ENC_LDFLAGS@
 
 noinst_LIBRARIES=libauth.a
-libauth_a_SOURCES=gpg.c
+libauth_a_SOURCES=gpg.cc
