--- a/src/ui-dumb/Makefile.am
+++ b/src/ui-dumb/Makefile.am
@@ -1,5 +1,5 @@
-AM_CFLAGS=@UI_CFLAGS@ -I..
+AM_CXXFLAGS=@UI_CFLAGS@ -I..
 AM_LDFLAGS=@UI_LDFLAGS@
 
 noinst_LIBRARIES=libui.a
-libui_a_SOURCES=ui.c
+libui_a_SOURCES=ui.cc
