--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -59,12 +59,11 @@ am__installdirs = "$(DESTDIR)$(gaimdir)" "$(DESTDIR)$(bindir)"
 gaimLTLIBRARIES_INSTALL = $(INSTALL)
 LTLIBRARIES = $(gaim_LTLIBRARIES)
 am__libdirectnet_gaim_la_SOURCES_DIST = chat.cc client.cc \
-	connection.cc directnet.cc dnconfig.cc hash.cc message.cc \
-	route.cc server.cc whereami.cc
+	connection.cc directnet.cc dnconfig.cc message.cc route.cc \
+	server.cc whereami.cc
 @GAIM_PLUGIN_TRUE@am_libdirectnet_gaim_la_OBJECTS = chat.lo client.lo \
 @GAIM_PLUGIN_TRUE@	connection.lo directnet.lo dnconfig.lo \
-@GAIM_PLUGIN_TRUE@	hash.lo message.lo route.lo server.lo \
-@GAIM_PLUGIN_TRUE@	whereami.lo
+@GAIM_PLUGIN_TRUE@	message.lo route.lo server.lo whereami.lo
 libdirectnet_gaim_la_OBJECTS = $(am_libdirectnet_gaim_la_OBJECTS)
 @GAIM_PLUGIN_TRUE@am_libdirectnet_gaim_la_rpath = -rpath $(gaimdir)
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
@@ -72,9 +71,8 @@ PROGRAMS = $(bin_PROGRAMS)
 am_directnet_OBJECTS = directnet-chat.$(OBJEXT) \
 	directnet-client.$(OBJEXT) directnet-connection.$(OBJEXT) \
 	directnet-directnet.$(OBJEXT) directnet-dnconfig.$(OBJEXT) \
-	directnet-hash.$(OBJEXT) directnet-message.$(OBJEXT) \
-	directnet-route.$(OBJEXT) directnet-server.$(OBJEXT) \
-	directnet-whereami.$(OBJEXT)
+	directnet-message.$(OBJEXT) directnet-route.$(OBJEXT) \
+	directnet-server.$(OBJEXT) directnet-whereami.$(OBJEXT)
 directnet_OBJECTS = $(am_directnet_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/scripts/depcomp
@@ -236,7 +234,6 @@ client.cc \
 connection.cc \
 directnet.cc \
 dnconfig.cc \
-hash.cc \
 message.cc \
 route.cc \
 server.cc \
@@ -256,7 +253,6 @@ directnet_LDADD = @UI_DIR@/libui.a \
 @GAIM_PLUGIN_TRUE@connection.cc \
 @GAIM_PLUGIN_TRUE@directnet.cc \
 @GAIM_PLUGIN_TRUE@dnconfig.cc \
-@GAIM_PLUGIN_TRUE@hash.cc \
 @GAIM_PLUGIN_TRUE@message.cc \
 @GAIM_PLUGIN_TRUE@route.cc \
 @GAIM_PLUGIN_TRUE@server.cc \
@@ -382,14 +378,12 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-connection.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-directnet.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-dnconfig.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-hash.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-message.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-route.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-server.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-whereami.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dnconfig.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hash.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/message.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/route.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/server.Plo@am__quote@
@@ -485,20 +479,6 @@ directnet-dnconfig.obj: dnconfig.cc
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='dnconfig.cc' object='directnet-dnconfig.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CXXFLAGS) $(CXXFLAGS) -c -o directnet-dnconfig.obj `if test -f 'dnconfig.cc'; then $(CYGPATH_W) 'dnconfig.cc'; else $(CYGPATH_W) '$(srcdir)/dnconfig.cc'; fi`
-
-directnet-hash.o: hash.cc
-@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CXXFLAGS) $(CXXFLAGS) -MT directnet-hash.o -MD -MP -MF "$(DEPDIR)/directnet-hash.Tpo" -c -o directnet-hash.o `test -f 'hash.cc' || echo '$(srcdir)/'`hash.cc; \
-@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/directnet-hash.Tpo" "$(DEPDIR)/directnet-hash.Po"; else rm -f "$(DEPDIR)/directnet-hash.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='hash.cc' object='directnet-hash.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CXXFLAGS) $(CXXFLAGS) -c -o directnet-hash.o `test -f 'hash.cc' || echo '$(srcdir)/'`hash.cc
-
-directnet-hash.obj: hash.cc
-@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CXXFLAGS) $(CXXFLAGS) -MT directnet-hash.obj -MD -MP -MF "$(DEPDIR)/directnet-hash.Tpo" -c -o directnet-hash.obj `if test -f 'hash.cc'; then $(CYGPATH_W) 'hash.cc'; else $(CYGPATH_W) '$(srcdir)/hash.cc'; fi`; \
-@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/directnet-hash.Tpo" "$(DEPDIR)/directnet-hash.Po"; else rm -f "$(DEPDIR)/directnet-hash.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='hash.cc' object='directnet-hash.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CXXFLAGS) $(CXXFLAGS) -c -o directnet-hash.obj `if test -f 'hash.cc'; then $(CYGPATH_W) 'hash.cc'; else $(CYGPATH_W) '$(srcdir)/hash.cc'; fi`
 
 directnet-message.o: message.cc
 @am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CXXFLAGS) $(CXXFLAGS) -MT directnet-message.o -MD -MP -MF "$(DEPDIR)/directnet-message.Tpo" -c -o directnet-message.o `test -f 'message.cc' || echo '$(srcdir)/'`message.cc; \
